# akaze_hack

./: CMakeLists.txt  LICENSE  README.md  er_helper.h  genTraj.sh  opencv_traj.cpp  pseudo_kinfu.sh
src/: akaze_match.cpp
src/lib/: utils.cpp
